[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhihu-cli"
version = "0.1.0"
description = "Zhihu scraper and Markdown conversion utilities."
requires-python = ">=3.10"
dependencies = [
    "curl-cffi",
    "beautifulsoup4",
    "rich",
]

[project.scripts]
zhihu = "zhihu_cli.main:main"