[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhihu-cli"
version = "0.1.0"
description = "Zhihu scraper and Markdown conversion utilities."
requires-python = ">=3.10"
dependencies = [
    "click",
    "curl-cffi",
    "lxml",
    "cssselect",
    "pyyaml",
    "rich",
]

[project.optional-dependencies]
classifier = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.0.0",
    "jieba",
    "networkx",
]

[project.scripts]
zhihu = "zhihu_cli.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
